# LangGraph-PGTD

./: .env.example  .gitignore  README.md  pyproject.toml
1-ejemplo-state-pydantic/: README.md
10-ejemplo-deep-agents-investigador/: README.md
10-ejemplo-deep-agents-investigador/src/: agente.py
10-ejemplo-deep-agents-investigador/tests/: test_busqueda_papers.py
2-ejemplo-agente-basico/src/: agente.py
3-ejemplo-agente-con-tools/: README.md
5-ejemplo-agente-con-memoria-sqlite/: README.md
6-ejemplo-agente-con-streaming/src/: agente.py
7-ejemplo-agente-con-interrupciones/: langgraph.json
7-ejemplo-agente-con-interrupciones/src/: agente.py
8-ejemplo-agente-con-langfuse/src/: agente.py
9-ejemplo-deep-agents-documentador/: .env.example  pyproject.toml
9-ejemplo-deep-agents-documentador/src/: agente.py
ejemplos/1-ejemplo-state-pydantic/src/: agente.py
ejemplos/2-ejemplo-agente-basico/: README.md
ejemplos/3-ejemplo-agente-con-tools/src/: agente.py
ejemplos/4-ejemplo-agente-con-memoria/: README.md
ejemplos/5-ejemplo-agente-con-memoria-sqlite/src/: agente.py
ejemplos/7-ejemplo-agente-con-interrupciones/: README.md
ejemplos/9-ejemplo-deep-agents-documentador/: README.md
ejemplos/ejemplo-agente-basico/: langgraph.json  pyproject.toml
ejemplos/ejemplo-agente-con-interrupciones/: README.md  pyproject.toml
ejemplos/ejemplo-agente-con-langfuse/: README.md  pyproject.toml
ejemplos/ejemplo-agente-con-langfuse/src/: agente.py
ejemplos/ejemplo-agente-con-memoria/: README.md  pyproject.toml
ejemplos/ejemplo-agente-con-memoria-sqlite/: README.md  pyproject.toml
ejemplos/ejemplo-agente-con-memoria-sqlite/src/: agente.py
ejemplos/ejemplo-agente-con-memoria/src/: agente.py
ejemplos/ejemplo-agente-con-streaming/: README.md  pyproject.toml
ejemplos/ejemplo-agente-con-streaming/src/: agente.py
ejemplos/ejemplo-agente-con-tools/: langgraph.json  pyproject.toml
ejemplos/ejemplo-deep-agents-documentador/: README.md  pyproject.toml
ejemplos/ejemplo-deep-agents-documentador/src/: agente.py
ejemplos/ejemplo-state-pydantic/: README.md
ejemplos/ejemplo-state-pydantic/src/: agente.py
informes/: informe_segmentacion_3D_imagenes_medicas.md
