[project]
name = "ejemplo-deep-agents-documentador"
version = "0.1.0"
description = "Sistema multiagente documentador con Deep Agents, Tavily y Langfuse"
dependencies = [
    "deepagents",
    "langchain-openai",
    "langchain-core",
    "langgraph",
    "tavily-python",
    "langfuse",
    "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
