[project]
name = "ejemplo-agente-basico"
version = "0.1.0"
description = "Ejemplo básico de agente LangGraph sin herramientas"
dependencies = [
    "langgraph",
    "langchain-openai",
    "langchain-core",
    "python-dotenv",
    "langgraph-cli[inmem]"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
