[project]
name = "ejemplo-agente-con-langfuse"
version = "0.1.0"
description = "Ejemplo de agente LangGraph con observabilidad usando Langfuse"
dependencies = [
    "langgraph",
    "langchain-openai",
    "langchain-core",
    "langfuse",
    "python-dotenv"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
