[project]
name = "ejemplo-deep-agents-documentador"
version = "0.1.0"
description = "Sistema multiagente documentador con Deep Agents, Tavily, OpenRouter y Langfuse"
dependencies = [
    "deepagents>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "langfuse>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
